# design-metrics

./: README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
src/design_metrics/: __init__.py
src/design_metrics/bib/: __init__.py
src/design_metrics/clean/: __init__.py
src/design_metrics/filter/: __init__.py
src/design_metrics/geo/: __init__.py
src/design_metrics/graphs/: __init__.py
src/design_metrics/hsr/: __init__.py  reliability.py
src/design_metrics/io/: __init__.py  bibtex.py  pdf.py
src/design_metrics/metrics/: __init__.py
src/design_metrics/net/: __init__.py  centrality.py
src/design_metrics/refs/: __init__.py
src/design_metrics/report/: __init__.py
src/design_metrics/stats/: __init__.py  effect_sizes.py
src/design_metrics/text/: __init__.py  embedding.py  keywords.py
src/design_metrics/topics/: __init__.py
src/design_metrics/utils/: __init__.py  array.py
src/design_metrics/viz/: __init__.py  embeddings.py
tests/: test_analysis_capabilities.py  test_bibtex.py  test_effect_sizes.py  test_embeddings.py  test_keywords.py  test_namespace.py  test_network.py  test_pdf.py  test_reliability.py  test_text_embedding.py
